// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Primary navigation/Main nav/Main nav item Dropdown 1`] = `
"<pds-main-nav-item dropdown="" text="Dropdown">
      <pds-list size="sm" spacing="sm">
        <pds-list-item size="sm"><!----> <li role="listitem" class=" pds-c-main-nav-item pds-c-main-nav-item--dropdown ">
      <button aria-label="dropdown link" part="main-nav-item-link" aria-expanded="false" class="pds-c-main-nav-item__link">
        <span class="pds-c-main-nav-item__text">Dropdown</span>
        <span part="main-nav-item-link-icon" class="pds-c-main-nav-item__icon"><pds-icon-chevron-down size="sm"></pds-icon-chevron-down></span>
      </button>
      
            <div part="main-nav-item-panel" class="pds-c-main-nav-item__panel">
              <div data-popper-arrow=""></div>
              <div class="pds-c-main-nav-item__panel-content">
                <slot></slot>
              </div>
            </div>
          
    </li><style>default</style><pds-primary-navigation-dropdown-link href="#">This is a link</pds-primary-navigation-dropdown-link></pds-list-item>
        <pds-list-item size="sm"><pds-primary-navigation-dropdown-link href="#">This is a link</pds-primary-navigation-dropdown-link></pds-list-item>
        <pds-list-item size="sm"><pds-primary-navigation-dropdown-link href="#">This is a link</pds-primary-navigation-dropdown-link></pds-list-item>
        <pds-list-item size="sm"><pds-primary-navigation-dropdown-link href="#">This is a link</pds-primary-navigation-dropdown-link></pds-list-item>
      </pds-list>
    </pds-main-nav-item>"
`;

exports[`Storyshots Components/Primary navigation/Main nav/Main nav item Link 1`] = `
"<pds-main-nav-item href="#" text="Link"><!----> <li role="listitem" class=" pds-c-main-nav-item ">
        <a part="main-nav-item-link" class="pds-c-main-nav-item__link" href="#">
          <span class="pds-c-main-nav-item__text">Link</span>
          <span class="pds-c-main-nav-item__arrow--mobile"><pds-icon-arrow-right size="sm"></pds-icon-arrow-right></span>
        </a>
        <slot></slot>
      </li><style>default</style></pds-main-nav-item>"
`;

exports[`Storyshots Components/Primary navigation/Main nav/Main nav item Link with icon 1`] = `
"<pds-main-nav-item arrow="" href="#" text="Link"><!----> <li role="listitem" class=" pds-c-main-nav-item pds-c-main-nav-item--arrow ">
        <a part="main-nav-item-link" class="pds-c-main-nav-item__link" href="#">
          <span class="pds-c-main-nav-item__text">Link</span>
          <span class="pds-c-main-nav-item__arrow"><pds-icon-arrow-right size="sm"></pds-icon-arrow-right></span>
        </a>
        <slot></slot>
      </li><style>default</style></pds-main-nav-item>"
`;

exports[`Storyshots Components/Primary navigation/Main nav/Main nav item Mega menu 1`] = `
"<pds-main-nav-item megamenu="" text="Mega menu">
      <pds-grid variant="1-3up" break="slower">
        <pds-grid-item>
          <placeholder-element>Item 1</placeholder-element>
        </pds-grid-item>
        <pds-grid-item>
          <placeholder-element>Item 2</placeholder-element>
        </pds-grid-item>
        <pds-grid-item>
          <placeholder-element>Item 3</placeholder-element>
        </pds-grid-item>
        <pds-grid-item>
          <placeholder-element>Item 4</placeholder-element>
        </pds-grid-item>
        <pds-grid-item>
          <placeholder-element>Item 5</placeholder-element>
        </pds-grid-item>
        <pds-grid-item>
          <placeholder-element>Item 6</placeholder-element>
        </pds-grid-item>
      </pds-grid>
    </pds-main-nav-item>"
`;
